- implement JSON IO for `Gene`, `Transcript`, and associated types - add `silent-genes-simple` with 2 example genes

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>silent-genes-model</module>
+        <module>silent-genes-simple</module>
+        <module>silent-genes-io</module>
         <module>silent-genes-gencode</module>
     </modules>
 
