--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>silent-genes-simple</module>
         <module>silent-genes-io</module>
         <module>silent-genes-gencode</module>
+        <module>silent-genes-jannovar</module>
     </modules>
 
     <groupId>xyz.ielis.silent.genes</groupId>
@@ -32,6 +33,8 @@
 
         <spring-boot-starter.version>2.5.5</spring-boot-starter.version>
         <svart.version>2.0.0-SNAPSHOT</svart.version>
+        <jannovar.version>0.35</jannovar.version>
+        <guava.version>31.0.1-jre</guava.version>
         <commons-compress.version>1.21</commons-compress.version>
         <slf4j.version>1.7.32</slf4j.version>
     </properties>
@@ -117,6 +120,22 @@
                 <groupId>org.monarchinitiative.svart</groupId>
                 <artifactId>svart</artifactId>
                 <version>${svart.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.charite.compbio</groupId>
+                <artifactId>jannovar-core</artifactId>
+                <version>${jannovar.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.google.guava</groupId>
+                        <artifactId>guava</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
