--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <spring-boot-starter.version>2.5.5</spring-boot-starter.version>
-        <svart.version>2.0.0-SNAPSHOT</svart.version>
+        <svart.version>2.0.0-RC1</svart.version>
         <jannovar.version>0.35</jannovar.version>
         <guava.version>31.0.1-jre</guava.version>
         <commons-compress.version>1.21</commons-compress.version>
