--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,10 @@
         <module>silent-genes-cli</module>
     </modules>
 
-    <groupId>xyz.ielis.silent.genes</groupId>
+    <groupId>org.monarchinitiative.sgenes</groupId>
     <version>0.0.1-SNAPSHOT</version>
     <name>SilentGenes</name>
+    <inceptionYear>2021</inceptionYear>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
