--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
         </snapshotRepository>
     </distributionManagement>
 
+    <licenses>
+        <license>
+            <name>BSD-3-Clause</name>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <profiles>
         <profile>
             <!-- This profile should be activated only when a release is being built. -->
