--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>SilentGenes</artifactId>
@@ -16,7 +14,7 @@
     </modules>
 
     <groupId>org.monarchinitiative.sgenes</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0</version>
     <name>SilentGenes</name>
     <inceptionYear>2021</inceptionYear>
 
@@ -67,7 +65,7 @@
         <connection>scm:git:git@github.com:ielis/SilentGenes.git</connection>
         <developerConnection>scm:git:git@github.com:ielis/SilentGenes.git</developerConnection>
         <url>scm:git:git@github.com:ielis/SilentGenes.git</url>
-        <tag>v${project.version}</tag>
+        <tag>SilentGenes-0.1.0</tag>
     </scm>
 
     <distributionManagement>
