--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <jannovar.version>0.35</jannovar.version>
         <guava.version>31.0.1-jre</guava.version>
         <commons-compress.version>1.21</commons-compress.version>
+        <commons-csv.version>1.9.0</commons-csv.version>
         <picocli.version>4.6.2</picocli.version>
         <slf4j.version>1.7.35</slf4j.version>
     </properties>
@@ -149,6 +150,11 @@
                 <groupId>info.picocli</groupId>
                 <artifactId>picocli</artifactId>
                 <version>${picocli.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-csv</artifactId>
+                <version>${commons-csv.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
