--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </modules>
 
     <groupId>org.monarchinitiative.sgenes</groupId>
-    <version>0.2.2</version>
+    <version>0.2.3-SNAPSHOT</version>
     <name>SilentGenes</name>
     <inceptionYear>2021</inceptionYear>
 
@@ -66,7 +66,7 @@
         <connection>scm:git:git@github.com:ielis/SilentGenes.git</connection>
         <developerConnection>scm:git:git@github.com:ielis/SilentGenes.git</developerConnection>
         <url>scm:git:git@github.com:ielis/SilentGenes.git</url>
-        <tag>v0.2.2</tag>
+        <tag>v${project.version}</tag>
     </scm>
 
     <distributionManagement>
