--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </modules>
 
     <groupId>org.monarchinitiative.sgenes</groupId>
-    <version>0.2.5-SNAPSHOT</version>
+    <version>0.2.5</version>
     <name>SilentGenes</name>
     <inceptionYear>2021</inceptionYear>
 
